Fix GitHub username formatting in tea.yaml

--- a/tea.yaml
+++ b/tea.yaml
@@ -19,5 +19,5 @@ metadata:
     - Web3
     - Automation
 maintainers:
-  - github: <IAmWhisperingShadow>
+  - github: IAmWhisperingShadow
     role: "developer"
